# dmentaLnx

./: .gitattributes  .gitignore  README.md  push  which_git_branches_track_what
githooks/: pre-commit
src/: Cargo.toml
src/fifo_hashset/: Cargo.toml  e  go  t
src/fifo_hashset/src/: lib.rs
src/id/: Cargo.toml
src/id/src/: lib.rs
src/rand/: Cargo.toml
src/rand/src/: lib.rs
txt/papersheets/: killexif.bash  rme.txt
